--- a/src/style.css
+++ b/src/style.css
@@ -46,6 +46,11 @@ a{
 }
 .product {
     padding: 30px;
+    transition: 2s;
+    max-width: 200px;
+    max-height: 200px;
+    border-radius: 5px;
+    margin-top: 5px;
 }
 
 /*.row.center{*/
@@ -80,4 +85,8 @@ img.small {
     /*margin: 0.5rem;*/
     border-radius: 0.5rem;
     max-width: 70%;
+}
+.product:hover {
+    background-color: dimgrey;
+
 }
