Kolejny css refactor

--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,6 @@
 body {
-    /*font-family: Helvetica, Arial, sans-serif;*/
-    font-family:  Helvetica, sans-serif;
+    font-family: Helvetica, sans-serif;
     background-color: white;
-    /*background-image: url("/public/alpinizm.jpg");*/
-    /*background-repeat: no-repeat;*/
-    /*background-attachment: fixed;*/
-    /*background-size: cover;*/
 }
 
 .header {
@@ -15,10 +10,28 @@ body {
     justify-content: space-between;
     align-items: center;
     border: 1px solid dimgrey;
-    margin: auto;
-    max-width: 70%;
+    width: 70%;
+    margin: auto auto auto 15%;
     padding-left: 10px;
     padding-right: 10px;
+    position: fixed;
+    background-color: white;
+}
+
+.footer {
+    position: fixed;
+    padding: 10px 10px 0px 10px;
+    bottom: 0;
+    height: 35px;
+    border: 1px solid dimgrey;
+    width: 70%;
+    margin-left: 15%;
+    margin-bottom: 5px;
+    background-color: white;
+    justify-items: center;
+    align-items: center;
+    display: flex;
+    justify-content: center;
 }
 
 h1, h2, h3 {
@@ -41,14 +54,17 @@ a {
     text-decoration: none;
     color: indigo;
 }
+
 a:hover {
     color: red;
 }
 
-.row{
+.row {
     display: flex;
     justify-content: space-between;
     padding-left: 30px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .col-1 {
@@ -62,7 +78,8 @@ a:hover {
 .block {
     background-color: lightgray;
     padding: 1rem;
-    margin: 0.5rem;
+    margin: 50px 100px auto 220px;
+    width: 50%;
     border-radius: 0.5rem;
     opacity: 0.9;
 }
@@ -78,7 +95,7 @@ a:hover {
     border: 1px solid dimgrey;
 }
 
-.row.center{
+.row.center {
     display: flex;
     align-items: center;
 }
@@ -86,6 +103,7 @@ a:hover {
 img.small {
     max-height: 8rem;
 }
+
 img.large {
     max-height: 15rem;
 }
@@ -93,6 +111,7 @@ img.large {
 .basket {
     display: flex;
     justify-content: space-between;
+    padding-left: 30px;
 }
 
 .basket.center {
@@ -103,12 +122,10 @@ img.large {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: auto;
     border-radius: 0.5rem;
     max-width: 70%;
-    opacity: 0.9;
-    padding: 10px;
-    margin-right: 50px;
+    padding: 10px 0px 10px 10px;
+    margin: auto 50px auto auto;
 }
 
 .product:hover {
@@ -116,7 +133,7 @@ img.large {
 }
 
 .product_details {
-    margin: auto;
+    margin: 50px auto auto 220px;
     width: 50%;
     background-color: lightgray;
     padding: 1rem;
@@ -144,10 +161,6 @@ img.large {
     background: 0 0;
     color: #ff4742;
 }
-.basket_button:hover {
-    background: 0 0;
-    color: #ff4742;
-}
 
 .product_buttons {
     display: flex;
@@ -158,20 +171,7 @@ img.large {
 .home, .contact, .shipping {
     width: 450px;
     padding-top: 50px;
-}
-
-.footer {
-    position: fixed;
-    padding: 10px 10px 0px 10px;
-    bottom: 0;
-    height: 40px;
-    border: 1px solid dimgrey;
-    width: 70%;
-    margin-left: 15%;
-    background-color: white;
-    justify-items: center;
-    display: flex;
-    justify-content: center;
+    margin-left: -80px;
 }
 
 .header_title {
@@ -182,9 +182,11 @@ img.large {
     display: flex;
     justify-content: flex-start;
 }
+
 .link {
     padding-left: 8px;
 }
+
 .basket_button {
     display: inline-block;
     outline: 0;
@@ -199,4 +201,101 @@ img.large {
     height: 30px;
     width: 50px;
     text-align: center;
+}
+
+.basket_button:hover {
+    background: 0 0;
+    color: #ff4742;
+}
+
+.basket_buttons {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 5px;
+}
+
+.checkout:hover {
+    background: 0 0;
+    color: #ff4742;
+}
+
+.product_details_form {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    align-self: flex-end;
+    padding-top: 20px;
+}
+
+.details_button, .checkout {
+    display: inline-block;
+    outline: 0;
+    cursor: pointer;
+    border-radius: 6px;
+    border: 2px solid #ff4742;
+    color: #fff;
+    background-color: #ff4742;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 2px 4px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1.5px 0px;
+    font-weight: 200;
+    font-size: 14px;
+    height: 30px;
+    width: 90px;
+    text-align: center;
+}
+
+.checkout_button:hover {
+    background: 0 0;
+    color: #ff4742;
+}
+
+.details_button:hover {
+    background: 0 0;
+    color: #ff4742;
+}
+
+.empty_basket {
+    padding-bottom: 15px;
+    padding-top: 15px;
+}
+
+.promotion {
+    color: red;
+}
+
+ul {
+    list-style: none;
+}
+
+ul li::before {
+    content: "\2022";
+    color: red;
+    font-weight: bold;
+    display: inline-block;
+    width: 1em;
+    margin-left: -1em;
+}
+
+.add, .remove {
+    outline: 0;
+    cursor: pointer;
+    border-radius: 6px;
+    border: 2px solid #ff4742;
+    color: #fff;
+    background-color: #ff4742;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 2px 4px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1.5px 0px;
+    font-weight: 200;
+    font-size: 9px;
+    height: 20px;
+    width: 20px;
+    text-align: center;
+}
+
+.add:hover, .remove:hover {
+    background: 0 0;
+    color: #ff4742;
+}
+
+.add_minus_buttons {
+    display: flex;
+    gap: 10px;
 }
